www/css/course_widget.css
/* ... */
.crswidg_img_small ul li div { width: 100%; height:140px; text-align:center; vertical-align:middle;}
.crswidg_img_small ul li div img, .crswidg_img_small ul li img { text-align:center; vertical-align:middle; alignment-adjust:middle; width:100%; height:100%;}
.crswidg_img_small ul li div a { margin:10%; display:block; vertical-align:middle; color:#989693;}
.crswidg_img_small ul li:last-child{margin:0}
.crswidg_drgbxtble_container { width:100%; text-align:center;}
.crswidg_drgbxtble_container_inner { margin:0 auto 50px auto; }
.crswidg_drgbxtble_box {width:20%; height:175px; display:inline-block; vertical-align:top; margin:0 0.5%; border:1px solid #c4c4c4; -webkit-box-shadow: 0px 1px 8px 3px rgba(0, 0, 0, .3); box-shadow: 0px 1px 8px 3px rgba(0, 0, 0, .3); 
 filter:
          progid:DXImageTransform.Microsoft.Shadow(color=#dddddd,direction=0,strength=1),
          progid:DXImageTransform.Microsoft.Shadow(color=#dddddd,direction=45,strength=1),
          progid:DXImageTransform.Microsoft.Shadow(color=#dddddd,direction=90,strength=2),
          progid:DXImageTransform.Microsoft.Shadow(color=#dddddd,direction=135,strength=3),
          progid:DXImageTransform.Microsoft.Shadow(color=#cccccc,direction=180,strength=10),
          progid:DXImageTransform.Microsoft.Shadow(color=#dddddd,direction=225,strength=3),
          progid:DXImageTransform.Microsoft.Shadow(color=#dddddd,direction=270,strength=2),
          progid:DXImageTransform.Microsoft.Shadow(color=#dddddd,direction=315,strength=1);
     background-color:#f6f6f6;     
}
.crswidg_drgbxtble_small {width:237px; height:175px; vertical-align:middle; background:#f6f6f6; text-align:center; color:#7e7d7d; font-size:17px; padding-left:0; padding-right:0; }
.crswidg_drgbxtble_box img { width:100%; height:100%; }
.crswidg_drgbxtble_small a { color:#989693; font-size:22px;}
body > li.ui-draggable.sequence-item { width:165px; height:140px; z-index:900; 
    background: none repeat scroll 0 0 #FFFFFF;
    border: 1px solid #C4C4C4;
    box-shadow: 0 1px 8px 3px rgba(0, 0, 0, 0.3);
    color: #989693;
    display: inline-block;
    font-family: HelveticaNeue,arial;
    font-size: 20px;
    list-style: none outside none;
    margin-right: 1%;
    position: relative;
    text-align: center;
    text-decoration: none;
    vertical-align: top;
}
body > li.ui-draggable.sequence-item a {font-size:20px; font-family:HelveticaNeue,arial; display:table-cell; vertical-align:middle; color:#989693; padding:10px; text-shadow: 0px 1px 1px #ffffff; filter: dropshadow(color=#ffffff, offx=0, offy=1); text-align: left; word-wrap: break-word; }
.crswidj_txt  h1#quesname_activity3{font-family:HelveticaNeue,arial; font-size:/*28px*/20px; width: 95%; color:#989693; font-weight:normal;line-height: 140%;text-align:left;}
.pro_container > li{
	/*background: linear-gradient(to bottom, #A3EDD1 0%, #9BE5C9 21%, #7BC5A8 75%, #70BB9E 100%) repeat scroll 0 0 transparent; */
	background: linear-gradient(to bottom, #D2D2D4 0%,#D2D2D4 50%,#D2D2D4 50%,#D2D2D4 100%)repeat scroll 0 0 transparent;
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#D2D2D4), color-stop(50%,#D2D2D4), color-stop(50%,#D2D2D4), color-stop(100%,#D2D2D4)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, #D2D2D4 0%,#D2D2D4 50%,#D2D2D4 50%,#D2D2D4 100%); /* Chrome10+,Safari5.1+ */
    border: 1px solid #D2D2D4;
    border-radius: 5px 5px 5px 5px;
    box-shadow: 0 0 1px 1px #D4D4D4 inset;
    display: inline-block;
    float: left;
    list-style: none outside none;
    margin-right: 1.3%;
    text-align: center;
    width: 43.5%;
}
.pro_container > li.match-item.ui-draggable{
	width: 16.5%;
}
.pro_container > li a{
	color: #FFFFFF;
    display: table-cell;
    font-family: HelveticaNeue,arial;
    font-size: 20px;
    height: 87px;
    padding: 5px;
  /*  text-shadow: 0 1px 1px #FFFFFF;  */
    vertical-align: middle;
    width: 4%;
}
.pro_container > li.match-item.ui-draggable a{
	width: 4%;
}
.pro_container > li.drgbtnsel{
	background: linear-gradient(to bottom, #F8F7F7 0%, #F4F3F3 20%, #E0E0E0 81%, #DCDCDC 100%) repeat scroll 0 0 transparent;
    border: 1px solid #CACAC9;
    box-shadow: 0 0 1px 1px #E6E6E6 inset;
}
.pro_container > li.drgbtnsel a{
	color: #9B9B9B;
}
.make-bounce{
	position: absolute;
	left:0;
	top:0;
}
.congrats_tina, .correct_tina {display: none; position: absolute; top:30%;}

.no-record{	float: left; margin-left: 40%; display: none; }
.pro_container > li{ /* word-break: break-all;*/ }
.disabled-item { opacity:0.3 }
.leftalign{text-align: left !important; vertical-align: middle; word-wrap: break-word;}
.righttalign{text-align: center !important; vertical-align: middle; word-wrap: break-word;}

.commentNotes { margin-top:1%; float:left; width:100%;margin:20px; auto;}
div.Buttons{margin-bottom:1%;}
div.commentICON{width: 40%;margin-top:0;margin-left: 40%;}
.commentNotifi{margin-left:30%;font-size: 13px;}


/*------------------- Sequence Widgets Ends Here ------------------------*/

@media handheld, only screen and (max-width:1600px){
	.crswidg_drgbxtble_box {width: 258px; height: 175px; margin:0 0.5%; }
	.crswidg_drgbxtble_small {width:258px; height:175px;  }
}
/* ... */

